# s-writor

./: CHANGELOG.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  mdui.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs
src/pages/: Albums.tsx  InitBlog.tsx  PostList.tsx  Settings.tsx
