[package]
name = "s-writor"
version = "0.1.0"
description = "S-Writor - 博客写作及管理桌面应用程序"
authors = ["S-Blog Team"]
edition = "2021"

[lib]
name = "s_writor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
flate2 = "1"
tar = "0.4"
s-blog-scaffold = { git = "https://github.com/Suzichen/s-blog.git", subdirectory = "crates/s-blog-scaffold" }
# s-blog-engine = { git = "https://github.com/Suzichen/s-blog.git", subdirectory = "crates/s-blog-engine" }


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.27.0"

